--- a/SmalStyle.css
+++ b/SmalStyle.css
@@ -59,3 +59,24 @@ body{
 #massage:hover{
   filter:opacity(1);
 }
+
+#titlehider{
+  display:none ;
+  position: absolute;
+  background-color: white;
+  margin: 10px;
+  padding:10px;
+  color:black;
+  text-shadow: none;
+  text-transform: uppercase;
+
+}
+#parent:hover #titlehider{
+      display: block;
+
+}
+
+#icon a:hover svg{
+  color:black;
+
+}
